force-app/main/default/objects/ProviderContact__c/ProviderContact__c.object-meta.xml
<CustomObject>
    <description>Used to detail different departments within each provider and their contact details</description>
    <label>Provider Contact</label>
    <nameField>
        <label>Provider Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>