force-app/main/default/objects/ProviderContact__c/fields/AgencyNumber__c.field-meta.xml
<CustomField>
    <fullName>AgencyNumber__c</fullName>
    <description>The agency number associate dto this department</description>
    <label>Agency number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>