force-app/main/default/objects/ProviderContact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact email of provider</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>