force-app/main/default/objects/ProviderContact__c/fields/InformationRequestFormat__c.field-meta.xml
<CustomField>
    <fullName>InformationRequestFormat__c</fullName>
    <description>The format by which this department receives requests</description>
    <label>Information request format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Cannot LOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>