force-app/main/default/objects/ProviderContact__c/fields/PolicyTypes__c.field-meta.xml
<CustomField>
    <fullName>PolicyTypes__c</fullName>
    <description>Indicates which kind of policies are handled by this department. This is currently for operations information only and does not restrict selection in any way.</description>
    <label>Policy types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defined Contribution</fullName>
            </value>
            <value>
                <fullName>Defined Benefit</fullName>
            </value>
            <value>
                <fullName>GIA</fullName>
            </value>
            <value>
                <fullName>ISA</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
            <value>
                <fullName>VCT</fullName>
            </value>
            <value>
                <fullName>EIS</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Annuity</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Direct Equity Holding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>