force-app/main/default/objects/ProviderContact__c/fields/PublicProviderList__c.field-meta.xml
<CustomField>
    <fullName>PublicProviderList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The provider related to this contact</description>
    <label>Provider</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Provider Contacts</relationshipLabel>
    <relationshipName>Provider_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>