force-app/main/default/objects/ProviderContact__c/fields/SignatureFormat__c.field-meta.xml
<CustomField>
    <fullName>SignatureFormat__c</fullName>
    <description>The format of the signature on which any data request must be sent to this department</description>
    <label>Signature format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital signature</fullName>
            </value>
            <value>
                <fullName>Wet signature (internal)</fullName>
            </value>
            <value>
                <fullName>Wet signature (client)</fullName>
            </value>
            <value>
                <fullName>Scanned wet signature (Client)</fullName>
                <label>Scanned wet signature (client)</label>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>