force-app/main/default/objects/ProviderContact__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <description>Phone number of provider</description>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>