force-app/main/default/objects/ProviderContact__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>The website for this department</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>