force-app/main/default/objects/ProviderContact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PublicProviderList__c</columns>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Address__Street__s</columns>
    <columns>Website__c</columns>
    <columns>Telephone__c</columns>
    <columns>DeveloperName__c</columns>
    <columns>PolicyTypes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>